# advent_of_code_2023

./: .gitignore  Cargo.toml  README.md  justfile
day01/: Cargo.toml
day01/benches/: benchmarks.rs
day01/src/: part1.rs  part2.rs
day02/: Cargo.toml
day02/benches/: benchmarks.rs
day02/src/: part1.rs  part2.rs
day03/: Cargo.toml
day03/benches/: benchmarks.rs
day03/src/: lib.rs  part1.rs  part1_set.rs  part2.rs
day04/: Cargo.toml
day04/benches/: benchmarks.rs
day04/src/: part1.rs  part2.rs
day05/: Cargo.toml
day05/benches/: benchmarks.rs
day05/src/: part1.rs  part2.rs
day06/: Cargo.toml
day06/benches/: benchmarks.rs
day06/src/: part1.rs  part2.rs
day07/: Cargo.toml
day07/benches/: benchmarks.rs
day07/src/: part1.rs  part2.rs
day08/: Cargo.toml
day08/benches/: benchmarks.rs
day08/src/: part1.rs  part2.rs
day09/: Cargo.toml
day09/benches/: benchmarks.rs
day09/src/: part1.rs  part2.rs
day10/: Cargo.toml
day10/benches/: benchmarks.rs
day10/src/: part1.rs  part2.rs
day11/: Cargo.toml
day11/benches/: benchmarks.rs
day11/src/: part1.rs  part2.rs
template/: cargo-generate.toml
template/day{{day_number}}/: Cargo.toml
template/day{{day_number}}/benches/: benchmarks.rs
template/day{{day_number}}/src/: part1.rs
