[package]
name = "day08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day08_bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
