[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day10_bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
