[package]
name = "day{{day_number}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day{{day_number}}_bench"
path = "benches/benchmarks.rs"
harness = false